# wechat-cc

./: .dependency-cruiser.cjs  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  access.test.ts  access.ts  agent-config.test.ts  agent-config.ts  cli-status.test.ts  cli-status.ts  cli.test.ts  cli.ts  config.ts  daemon-kill.test.ts  daemon-kill.ts  docs.test.ts  docs.ts  doctor.test.ts  doctor.ts  handoff.test.ts  handoff.ts  ilink.test.ts  ilink.ts  log-viewer.ts  log.ts  logs.ts  memory.test.ts  memory.ts  package.json  project-registry.test.ts  project-registry.ts  runtime-info.test.ts  runtime-info.ts  send-reply.test.ts  send-reply.ts  server.ts  service-manager.test.ts  service-manager.ts  (+12 more)
.claude-plugin/: plugin.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  desktop.yml  mirror-desktop-tag.yml
apps/desktop/: dev-server.ts  package.json  playwright.config.ts  shim.e2e.test.ts  test-shim.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/scripts/: postinst.sh
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/installer/: desktop-installer.md
docs/ops/: 2026-04-22-handoff.md  voxcpm2-deployment.md
docs/plans/: 2026-04-15-compact-permission-relay.md  2026-04-15-promotion.md  2026-04-15-wechat-restart-command.md  2026-04-18-project-switch.md  (+14 more)
scripts/: acceptance-p0p1.ts  gemini-spike.ts  send-wanan-voice.ts  voice-bubble-sweep.ts  voxcpm-tunnel.ps1
types/: qrcode-terminal.d.ts
(+506 files in other folders)
